svc1.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc1
spec:
  type: LoadBalancer
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 8080
