svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc2
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 8080
