ingress-canary.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-canary
  labels:
    app: app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # Enable canary and send 10% of traffic to version 2
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
spec:
  rules:
  - host: app.kubernetes.example
    http:
      paths:
      - backend:
          serviceName: app2
          servicePort: 80
