ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
  labels:
    app: app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: app.kubernetes.example
    http:
      paths:
      - backend:
          serviceName: svc1
          servicePort: 80
